# LearningWASAPI

./: CMakeLists.txt  README.md
001/: main.cpp
002/: CMakeLists.txt  main.cpp
003/: AudioEndpointDeviceNotificationClient.cpp  AudioEndpointDeviceNotificationClient.h  CMakeLists.txt  main.cpp
